<resources>
    <string name="app_name">AndroidCustomerManagement</string>
    <string name="action_settings">Settings</string>
    <string name="title_on_main_page">List of Customers</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="lastname_hint">enter Customer lastname</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="id">Id Number</string>
    <string name="firstname_hint">Enter Customer firstname</string>
    <string name="add_button_text">add</string>
    <string name="refresh_button_text">refresh</string>
</resources>
