<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/borderMargin"
    tools:context="vn.codegym.androidcustomermanagement.MainActivity">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="475dp"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/add_button"
                android:layout_alignBottom="@+id/add_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/title_on_main_page"
                android:textSize="18sp" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/refresh_button"
                android:layout_toStartOf="@+id/refresh_button"
                android:text="@string/add_button_text"
                android:onClick="add"/>

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/refresh_button_text"
                android:onClick="refresh"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/borderMargin" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
